Implemented basic accordion feature.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,27 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    Hello frontend development world!
+    <div class="faq-container">
+      <div class="faq-item">
+        <button class="question">What is JavaScript?</button>
+        <div class="answer hide">
+          <p>
+            A programming language that allows you to implement complex features
+            on web pages.
+          </p>
+        </div>
+      </div>
+
+      <div class="faq-item">
+        <button class="question">Is React a library or framework?</button>
+        <div class="answer hide">
+          <p>
+            React is technically a JavaScript library for building user
+            interfaces.
+          </p>
+        </div>
+      </div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
